--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,9 @@
 /* Media queries breakpoints */
-:root {
-  --xs: 0;
-  --sm: 544px;
-  --md: 768px;
-  --lg: 992px;
-  --xl: 1200px;
-}
-
-@custom-media --mobile   (min-width: val(--xs));
-@custom-media --phone    (min-width: val(--sm));
-@custom-media --tablet   (min-width: val(--md));
-@custom-media --desktop  (min-width: val(--lg));
-@custom-media --yuuge    (min-width: val(--xl));
+@custom-media --mobile  (min-width: 0);
+@custom-media --phone   (min-width: 544px);
+@custom-media --tablet  (min-width: 768px);
+@custom-media --desktop (min-width: 992px);
+@custom-media --huge    (min-width: 1200px);
 
 body {
   width: 100vw;
