--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,21 @@ body {
   & > div:first-of-type {
     width: 100%;
     height: 100%;
-    background: url(./static/00.jpg) no-repeat center center fixed;
-    background-size: cover;
   }
 }
 
 .container {
+  width: 100%;
+  height: 100%;
 
+  display: flex;
+  background-image: url(./static/00.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  @media (--mobile) {
+    flex-flow: column wrap;
+  }
+}
 }
