Configure scalable base font size

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@
 @custom-media --desktop (min-width: 992px);
 @custom-media --huge    (min-width: 1200px);
 
+html {
+  font-size: 62.5%;
+}
+
 body {
+  font-size: 1.6rem;
   width: 100vw;
   height: 100vh;
 
