Add header styles

--- a/src/index.css
+++ b/src/index.css
@@ -41,13 +41,43 @@ body {
   height: 100%;
 
   display: flex;
-  background-image: url(./static/00.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
+
+  align-content: stretch;
 
   @media (--mobile) {
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
   }
 }
+
+.header {
+  display: flex;
+  flex: 5 0 auto;
+
+  background-repeat: no-repeat;
+  background-image: url(../static/00.jpg);
+  background-position: bottom center;
+  background-size: cover;
+
+
+  font-size: 500%;
+
+  justify-content: center;
+  align-items: center;
+
+  & h3 {
+
+  }
+
+  & h2 {
+    @apply --font-amatic;
+  }
+
+  & h4 {
+
+  }
+}
+
+.content {
+  background-color: red;
+  flex: 10 0 auto;
 }
