--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,4 @@
-/* Media queries breakpoints */
-@custom-media --mobile  (min-width: 0);
-@custom-media --phone   (min-width: 544px);
-@custom-media --tablet  (min-width: 768px);
-@custom-media --desktop (min-width: 992px);
-@custom-media --huge    (min-width: 1200px);
+@import "./media.css";
 
 /* Font families */
 :root {
@@ -54,7 +49,7 @@ body {
   flex: 5 0 auto;
 
   background-repeat: no-repeat;
-  background-image: url(../static/00.jpg);
+  background-image: url("../static/00.jpg");
   background-position: bottom center;
   background-size: cover;
 
@@ -63,7 +58,6 @@ body {
 
   justify-content: center;
   align-items: center;
-
   & h3 {
 
   }
