--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,5 @@
 @import "./media.css";
-
-/* Font families */
-:root {
-  --font-amatic: {
-    font-family: 'Amatic SC', cursive;
-  };
-
-  --font-raleway: {
-    font-family: 'Raleway', sans-serif;
-  };
-}
+@import "./fonts.css";
 
 html {
   font-size: 62.5%;
