--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,7 +43,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  color: var(--color-white-opulence-chocolate);
+  color: var(--color-opulence-chocolate);
   font-size: 10vw;
   background-repeat: no-repeat;
   background-image: url("../static/00.jpg");
@@ -54,26 +54,28 @@ body {
     margin: 0;
     text-transform: uppercase;
     text-shadow: #CCC 1px 0 10px;
+    text-shadow: 0px 1px 1px var(--color-white-chocolate), 0px 2px 1px var(--color-milk-chocolate), 0px 3px 1px var(--color-white-chocolate);
   }
 
   & h3 {
     font-size: 0.6em;
-    border-top: 0.5rem solid red;
+    border-top: 0.3rem solid var(--color-dark-chocolate);
   }
 
   & h2 {
     @apply --font-amatic;
     line-height: 1;
-    border-bottom: 0.5rem solid red;
+    border-bottom: 0.3rem solid var(--color-dark-chocolate);
   }
 
   & h3, & h2 {
-    padding: 0 0.5em;
+    padding: 0 1rem;
   }
 
   & h4 {
-    font-size: 0.225em;
-    margin-top: 0.2em;
+    color: var(--color-mixed-chocolate);
+    font-size: 0.255em;
+    margin-top: 0.3em;
   }
 }
 
