Use media query ranges
http://cssnext.io/features/#media-queries-ranges

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -1,6 +1,4 @@
-/* Media queries breakpoints */
-@custom-media --mobile  (min-width: 0);
-@custom-media --phone   (min-width: 544px);
-@custom-media --tablet  (min-width: 768px);
-@custom-media --desktop (min-width: 992px);
-@custom-media --huge    (min-width: 1200px);
+@custom-media --mobile  (width >= 0);
+@custom-media --phone   (width >= 544px);
+@custom-media --tablet  (width >= 768px);
+@custom-media --huge    (width => 1200px);
