Add portrait and landscape custom media queries

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -1,4 +1,6 @@
-@custom-media --mobile  (width >= 0);
-@custom-media --phone   (width >= 544px);
-@custom-media --tablet  (width >= 768px);
-@custom-media --huge    (width => 1200px);
+@custom-media --mobile (width >= 0);
+@custom-media --phone (width >= 544px);
+@custom-media --portrait-tablet (orientation: landscape) and (width >= 768px);
+@custom-media --landscape-tablet (orientation: portrait) and (width >= 768px);
+@custom-media --portrait-desktop (orientation: landscape) and (width => 1200px);
+@custom-media --landscape-huge (orientation: portrait) and (width => 1200px);
