--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,9 +1,9 @@
 :root {
   --font-amatic: {
     font-family: 'Amatic SC', cursive;
-  };
+  }
 
   --font-raleway: {
     font-family: 'Raleway', sans-serif;
-  };
+  }
 }
