--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@ body {
   width: 100vw;
   height: 100vh;
 
-  @apply --font-raleway;
+  font-family: var(--font-raleway);
   color: --color-dark-chocolate;
 
   & > article {
@@ -66,7 +66,7 @@ body {
   }
 
   & h2 {
-    @apply --font-amatic;
+    font-family: var(--font-amatic);
     line-height: 1;
     border-bottom: 0.3rem solid var(--color-dark-chocolate);
   }
